# Pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.bat  how_raytracing_works.c  shell.bat
code/: ray.h  ray_math.h  win32_main.cpp
deprecated/: old_codes.cpp
include/: nc_ds.h  ray.h  ray.hpp  ray_dxr.h  ray_math.h  ray_math.hpp
res/: README.txt  mario.glb  shader.hlsl
src/: how_rt_works_vk.cpp  if_dyn_array.inc  image_compare.c  inf_forge.h  inf_forge_win.c  win32_main.cpp
